WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71212
[Qt] MiniBrowser doesn't resize as the size is always overridden
https://bugs.webkit.org/show_bug.cgi?id=71212
Summary
[Qt] MiniBrowser doesn't resize as the size is always overridden
Kenneth Rohde Christiansen
Reported
2011-10-31 03:01:04 PDT
SSIA
Attachments
Patch
(1.57 KB, patch)
2011-10-31 03:02 PDT
,
Kenneth Rohde Christiansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2011-10-31 03:02:19 PDT
Created
attachment 113028
[details]
Patch
Simon Hausmann
Comment 2
2011-10-31 06:09:31 PDT
Comment on
attachment 113028
[details]
Patch r=me. Good catch ;)
WebKit Review Bot
Comment 3
2011-10-31 07:15:25 PDT
Comment on
attachment 113028
[details]
Patch Clearing flags on attachment: 113028 Committed
r98854
: <
http://trac.webkit.org/changeset/98854
>
WebKit Review Bot
Comment 4
2011-10-31 07:15:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug