[Qt] MiniBrowser doesn't resize as the size is always overridden https://bugs.webkit.org/show_bug.cgi?id=71212

Reviewed by Simon Hausmann.

Remove call overriden the size.

* MiniBrowser/qt/main.cpp:
(main):


Canonical link: https://commits.webkit.org/87468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98854 268f45cc-cd09-0410-ab3c-d52691b4dbfc